-돌봄사: 새로운 돌봄 가능 날짜 등록 페이지(CSS 추가)

--- a/src/main/resources/templates/careavailabledate/new-care-available-date.html
+++ b/src/main/resources/templates/careavailabledate/new-care-available-date.html
@@ -6,6 +6,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
     <link th:href="@{/css/careAvailableDateStyle.css}" rel="stylesheet">
+    <link th:href="@{/css/new-care-available-date.css}" rel="stylesheet">
     <link th:href="@{/css/chatbot.css}" rel="stylesheet">
     <link th:href="@{/css/chat.css}" rel="stylesheet">
 </head>
