--- a/src/main/resources/templates/certification/new-certification.html
+++ b/src/main/resources/templates/certification/new-certification.html
@@ -5,6 +5,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
     <link th:href="@{/css/profileStyle.css}" rel="stylesheet">
+    <link th:href="@{/css/edit-page.css}" rel="stylesheet">
     <link th:href="@{/css/error-message.css}" rel="stylesheet">
     <link th:href="@{/css/chatbot.css}" rel="stylesheet">
     <link th:href="@{/css/chat.css}" rel="stylesheet">
