--- a/src/main/resources/templates/admin/reservation/reservation-detail.html
+++ b/src/main/resources/templates/admin/reservation/reservation-detail.html
@@ -122,6 +122,7 @@
                             <a class="dropdown-item" th:href="@{/pets-care/admin/members}">회원 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/reservations}">예약 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/amounts}">포인트 내역 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/pet-hospitals}">동물 병원 정보 관리</a>
                         </div>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item text-danger" onclick="event.preventDefault(); document.getElementById('logoutForm').submit();">로그아웃</a>
@@ -190,14 +191,12 @@
     </div>
 
     <h4 class="mt-5">🐾 예약된 반려동물</h4>
-    <ul class="list-group" th:each="pet : ${reservation.pets}">
-        <li class="list-group-item">
-            <!-- 반려견 프로필 이미지 -->
+    <ul class="pet-list">
+        <li class="pet-list-item" th:each="pet : ${reservation.pets}">
             <div th:if="${pet.profileImage != null}">
                 <img th:src="@{'/uploads/pets/' + ${pet.profileImage}}" alt="반려견 프로필 사진" class="pet-profile-img">
             </div>
             <br>
-
             <strong th:text="${pet.name}"></strong>
             (나이: <span th:text="${pet.age}"></span>세,
             품종: <span th:text="${pet.breed}"></span>)<br>
